k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sk018
  namespace: skala-practice
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: sk018.dev.example.com
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: be-svc
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fe-svc
                port:
                  number: 80
